fix date picker spacing

--- a/src/base-components/DatePicker.css
+++ b/src/base-components/DatePicker.css
@@ -1,3 +1,3 @@
 .date-dropdown {
-    margin: 5px;
+    margin: 1px;
 }
